sc7/assets/service-c-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c-deployment
  labels:
    app: service-c-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c-app
      version: v1
  template:
    metadata:
      labels:
        app: service-c-app
        version: v1
    spec:
      containers:
        - name: service-c-container
          image: artashesavetisyan/istio-basics-course:service-c-java-11
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          securityContext:
            runAsUser: 1000
          resources:
            limits:
              memory: 32Mi
              cpu: 100m
