sc7/assets/service-c-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-c-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
