sc7/assets/service-ext-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-ext-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: ISTIO_MUTUAL
      hosts:
        - "*"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
