sc7/assets/extrenal-cluster-se.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: extrenal-cluster-se
spec:
  hosts:
    - istio-ingressgateway.istio-system.svc.cluster.local
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
      targetPort: 443
    - number: 443
      name: https-port
      protocol: HTTPS
  resolution: DNS
