sc7/assets/inbound-to-service-c-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inbound-to-service-c-vs
spec:
  hosts:
    - "*"
  gateways:
    - service-c-gw
  http:
    - match:
        - uri:
            exact: /service-c
      rewrite:
        uri: /
      route:
        - destination:
            host: service-c-srv
            port:
              number: 80
